# UFES-_-LLM_Walker

hcs_ollama/: CMakeLists.txt  package.xml
hcs_ollama/config/: map_description.json  movemtent_config.yaml
hcs_ollama/hcs_ollama/: multi_movement_action.py  multiagent_ollama_node.py  ollama_img_saver.py  ollama_node.py  ollama_node_vlm.py  ollama_vlsm_client.py
hcs_ollama/hcs_ollama/lcad_retrieval/: lcad_retriever.py
hcs_ollama/hcs_ollama/utils/: langchain_owm_functions.py  multi_move_structured.py  multiuse_functions.py  ollama_functions.py  structured_output.py
hcs_ollama/ollama_config/: agent_configuration.yaml
hcs_ollama/retriever_data/pdf/: chunks.csv  chunks.index
hcs_ollama_msgs/: CMakeLists.txt  package.xml
hcs_ollama_msgs/action/: GetLlmResponse.action  GetMultiAgentMoveRespose.action  GetMultiAgentResponse.action  GetVlmResponse.action
hcs_ollama_msgs/msg/: EvaluatorResponse.msg  ExecutorResponse.msg  LocalizatorResponse.msg  MultiAgentResponse.msg  PartialMultiResponse.msg  PartialResponse.msg  Response.msg  SystemConfigurationAi.msg
hcs_ollama_msgs/srv/: Detokenize.srv  DistanceChangeService.srv  Embedding.srv  Tokenize.srv
teste_walker_llm/: package.xml  setup.cfg  setup.py
teste_walker_llm/teste_walker_llm/: Control_node.py  ollama_node.py  recept_node.py  service_node.py
vwalker_hri/: CMakeLists.txt  package.xml  setup.cfg  setup.py
vwalker_hri/include/vwalker_hri/: admittance_controller_node.h  force_filter_node.h  multi_admitance_controller_node.hpp  superviser_node.h  virtual_trail_admittance_controller_node.h
vwalker_hri/launch/: hri.launch.py  multi_hri.launch.py  virtual_trail_hri.launch.py
vwalker_hri/param/: admittance_controller_node.yaml  force_filter_node.yaml  superviser_node.yaml
vwalker_hri/src/: admittance_controller_node.cpp  force_filter_node.cpp  multi_admitance_controller_node.cpp  path_following.cpp  superviser_node.cpp  virtual_trail_admittance_controller_node.cpp
vwalker_hri/vwalker_hri/: scan_physical2virtual.py
