<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hcs_ollama</name>
  <version>0.1.0</version>
  <description>Paquete de comunicacion con ollama para utilizacion de ollama para continuo uso con ros2</description>
  <maintainer email="hcs@todo.todo">hcs</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>hcs_ollama_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
